# MCP_claude

email/: credentials.json  pyproject.toml  requirements.txt  send_email.py  token.json
gmail_mcp/: base_agent.py  gmail_tools.py  pyproject.toml  requirements.txt  token.json
